<resources>
    <string name="app_name">  Aritmetica basica</string>
    <string name="aritmetica">Aritmitica</string>
    <string name="valor1">Primer valor</string>
    <string name="valor2"> Segundo valor</string>
    <string name="suma">Sumar</string>
    <string name="resta">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="modulo">Modulo</string>
    <string name="resultado">Resultado</string>

</resources>