<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/tnNumero1"
        android:layout_width="201dp"
        android:layout_height="47dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/valor1"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tnNumero2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/tnNumero2"
        android:layout_width="210dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/valor2"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tnNumero1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="246dp"
        android:layout_height="121dp"
        app:layout_constraintBottom_toTopOf="@+id/bResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tnNumero2">

        <RadioButton
            android:id="@+id/rbSuma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suma"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbResta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resta"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbMulti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiplicar"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbModulo"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="@string/modulo"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="295dp"
        android:layout_height="26dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tnNumero1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/aritmetica" />

    <Button
        android:id="@+id/bResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="operaciones"
        android:text="@string/resultado"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="149dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bResultado" />

</androidx.constraintlayout.widget.ConstraintLayout>